@@ -54,7 +54,7 @@
   f04e64fef62d2dac423b664b3d502ef36e34074c 2011101100 mingw32-pexports.xml
   2dc9b22e0a53267bd4f764100b4d01b740f3aa87 2011101100 mingw32-popt.xml
   9399cb6c2efd8fd907c42a278a6f41bbde9e440c 2011091400 mingw32-pthreads-w32.xml
-  488d6d4e037b19acdffc6a54c753fa69c21e80f9 2011082300 mingw32-runtime.xml
+  a3d7fbc9339f748d7e3739e158dbe4a8a0dc7b1c 2012063000 mingw32-runtime.xml
   a8d4de8b2feefdf9744cff733051e395f72e7b21 2011101400 mingw32-xz.xml
   0514f6a48779110bb6dc3dee17defcdc5f1d1bae 2012051700 mingw32-zlib.xml
 #
